[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bjoern3"
version = "0.1.0"
description = "A screamingly fast Python 3 WSGI server written in C."
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "2-clause BSD" }
authors = [
  { name = "Alessandro Molina", email = "alessandro@molina.fyi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
Homepage = "http://github.com/amol-/bjoern3"

[tool.setuptools]
py-modules = ["bjoern"]
